2009-08-26    <piumarta@netbsd.piumarta.com>

	* plugins/UUIDPlugin/config.cmake: Find libuuid but don't require it.

2009-08-26    <piumarta@solaris.piumarta.com>

	* plugins/PseudoTTYPlugin/config.cmake: Check for libutil and
	unix98 ptys independently.

	* vm-sound-Sun/config.cmake: Fail if head missing in both
	potential locations.

2009-08-27  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/GStreamerPlugin/config.cmake: Configure gstreamer via pkg-config.

2009-08-26  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/PseudoTTYPlugin/config.cmake: Disambiguate whether openpty found
	in libc and in libutil.

2009-08-26    <piumarta@ubuntu.piumarta.com>

	* plugins/SqueakFFIPrims/any-libffi.c: Include ffi.h unless
	HAVE_FFI_FFI_H is defined.

	* plugins/RomePlugin/config.cmake, plugins/UUIDPlugin/config.cmake,
	plugins/SqueakFFIPrims/config.cmake, plugins/OggPlugin/config.cmake,
	plugins/UnixOSProcessPlugin/config.cmake,
	plugins/GStreamerPlugin/config.cmake, plugins/DBusPlugin/config.cmake,
	plugins/SocketPlugin/config.cmake, vm-sound-ALSA/config.cmake,
	vm-sound-NAS/config.cmake, vm-display-fbdev/config.cmake,
	vm-sound-OSS/config.cmake: Use PLUGIN_FIND and PLUGIN_REQUIRE macros
	wheverver possible.  Remove explicit manipulation of include and library
	lists.

	* plugins/UUIDPlugin/sqUnixUUID.c: Assume include path set in
	config.cmake as required.

	* vm/config.cmake: Remove explicit test for /usr/pkg.
	* vm/build.cmake: Search vm_include_directories and
	vm_link_directories.  Link against vm_link_libraries.

	* cmake/PluginInternal.cmake, cmake/PluginExternal.cmake: Remove
	CMAKE_REQUIRE_INCLUDES from include paths.

	* cmake/Plugins.cmake: Add PLUGIN_FIND and PLUGIN_REQUIRE macros.
	* cmake/Utils.cmake: Add macro LIST_APPEND.

2009-08-25    <piumarta@netbsd.piumarta.com>

	* plugins/SqueakFFIPrims/config.cmake: Check for libffi via
	pkf-config before eplicit search.

	* vm/config.cmake: Add includes and libraries from /usr/pkg if present.
