@@ -1,8 +1,13 @@
 PLUGIN_FIND_INCLUDE (SYS_AUDIOIO sys/audioio.h)
 PLUGIN_FIND_INCLUDE (SUN_AUDIOIO sun/audioio.h)
+PLUGIN_REQUIRE_INCLUDE (STROPTS stropts.h)
 
-IF (NOT HAVE_SYS_AUDIOIO_H AND NOT HAVE_SUN_AUDIOIO_H)
+IF (NOT VM_HOST_OS MATCHES "solaris.*")
   PLUGIN_DISABLE ()
+ELSE ()
+  IF (NOT HAVE_SYS_AUDIOIO_H AND NOT HAVE_SUN_AUDIOIO_H)
+    PLUGIN_DISABLE ()
+  ENDIF ()
 ENDIF ()
 
 CONFIG_DEFINE (HAVE_SYS_AUDIOIO_H)
